[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TrelloApi"
version = "0.1.0"
authors = [
  { name="Jordy Araújo", email="jordyaraujo@outlook.com" },
]
description = "Object oriented Python wrapper for Trello API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "httpx==0.23.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JordyAraujo/TrelloApi"
"Bug Tracker" = "https://github.com/JordyAraujo/TrelloApi/issues"
